RESOLVED FIXED294974
Safari shows black UI after entering Portal Mode for MSE spatial Videos.
https://bugs.webkit.org/show_bug.cgi?id=294974
Summary Safari shows black UI after entering Portal Mode for MSE spatial Videos.
Jean-Yves Avenard [:jya]
Reported 2025-06-25 08:18:47 PDT
Steps To Reproduce: 1. Launch safari with visionOS beta 26 2. Load webpage: https://jyavenard.github.io/htmltests/tests/spatial/ 2. Play the second embedded video and enter fullscreen (if entering element fullscreen, one will have to tap the “Spatial Video” button” as well) 4. Notice the black UI 5. Tap on immersive button. 6. Shows black UI. rdar://153932317
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-06-25 08:24:48 PDT
Álvaro Velad Galván
Comment 2 2025-06-26 00:06:43 PDT
I found another issue with https://jyavenard.github.io/htmltests/tests/spatial/ Play first video (HTML5 video with MP4 video) Mute the video Enter fullscreen The video si freeze, I you unmute the video, the video plays fine again. Can you review it? Note: we reproduce the same issue with spatial videos without audio.
Jean-Yves Avenard [:jya]
Comment 3 2025-06-26 17:27:08 PDT
>The video si freeze, I you unmute the video, the video plays fine again. This is element fullscreen, only audible video can be controlled with MediaSession or external controls. That's how it has always worked. We have ongoing work in this area, try playing with the preference "VideoFullsceenPrefersMostVisibleHeuristic" it should work as you expect even with muted videos.
Jean-Yves Avenard [:jya]
Comment 4 2025-06-27 05:48:49 PDT
EWS
Comment 5 2025-06-27 13:36:34 PDT
Committed 296748@main (93215ecea1e9): <https://commits.webkit.org/296748@main> Reviewed commits have been landed. Closing PR #47295 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.