Safari shows black UI after entering Portal Mode for MSE spatial Videos. https://bugs.webkit.org/show_bug.cgi?id=294974 rdar://153932317

Reviewed by Jer Noble.

This is a regression from 295444@main. Following this change, we copied
the spatial metadata to the decoded CMSampleBuffer, however it would now
indicate that it has both a left and right image but we only provided the
left eye image.

For now, on visionOS, if the media being played contains spatial or immersive
content, disable WebCoreDecompressionSession and fallback to using AVSBDL.

* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.h: When enqueuing a compressed sample,
also store if decompression session is to be used.
* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::enqueueSample): Check if content has spatial or immersive content,
set flag accordingly.
(WebCore::VideoMediaSampleRenderer::decodeNextSampleIfNeeded):
(WebCore::VideoMediaSampleRenderer::totalVideoFrames const): use renamed member.
(WebCore::VideoMediaSampleRenderer::droppedVideoFrames const): use renamed member.
(WebCore::VideoMediaSampleRenderer::corruptedVideoFrames const): use renamed member.
(WebCore::VideoMediaSampleRenderer::totalFrameDelay const): use renamed member.

Canonical link: https://commits.webkit.org/296748@main